--- a/talos/src/component/markFilter/markFilter.module.scss
+++ b/talos/src/component/markFilter/markFilter.module.scss
@@ -2,14 +2,14 @@
 @use '../../styles/curves.scss' as *;
 
 :root, :root[data-theme='light'] {
-    --markfilter-surface: #{$white-1};
+    --markfilter-bg: #{$white-1};
     --markfilter-title: #{$grey-1};
     --markfilter-title-shadow: #{rgba($black-0, 0.25)};
     --markfilter-accent: #{$primary-accent-5};
     --markfilter-placeholder: #{$black-1};
 }
 :root[data-theme='dark'] {
-    --markfilter-surface: #{$grey-1};
+    --markfilter-bg: #{$grey-1};
     --markfilter-title: #{$light-1};
     --markfilter-title-shadow: #{rgba($black-0, 0.8)};
     --markfilter-accent: #{$primary-accent-4};
@@ -33,7 +33,7 @@
     height: 3rem;
     display: flex;
     align-items: center;
-    background-color: var(--markfilter-surface);
+    background-color: var(--markfilter-bg);
     border-radius: 3px 3px 0 0;
     cursor: pointer;
     transition: all 0.2s;
@@ -85,7 +85,7 @@
     z-index: 2;
     position: relative;
     border-radius: 0 0 3px 3px;
-    background-color: var(--markfilter-surface);
+    background-color: var(--markfilter-bg);
     display: grid;
     grid-template-rows: 0fr;
     transition: grid-template-rows 0.4s $standard-curve;
@@ -106,7 +106,7 @@
         padding: 0 0.75rem;
         transform: translateY(-6px);
         filter: blur(6px);
-        background-color: var(--markfilter-surface);
+        background-color: var(--markfilter-bg);
         transition:
             opacity 0.4s ease 0.15s,
             transform 0.4s ease 0.15s,
