--- a/talos/src/component/regSwitch/regSwitch.module.scss
+++ b/talos/src/component/regSwitch/regSwitch.module.scss
@@ -4,7 +4,7 @@
 @use 'sass:math';
 
 :root, :root[data-theme='light'] {
-    --regswitch-surface: #{rgba($white-2, 0.25)};
+    --regswitch-bg: #{rgba($white-2, 0.25)};
     --regswitch-item: #{$grey-1};
     --regswitch-item-hover: #{$grey-2};
     --regswitch-selected: #{$primary-accent-4};
@@ -12,7 +12,7 @@
     --regswitch-icon-off: #{$white-1};
 }
 :root[data-theme='dark'] {
-    --regswitch-surface: #{rgba($grey-2, 0.3)};
+    --regswitch-bg: #{rgba($grey-2, 0.3)};
     --regswitch-item: #{$black-1};
     --regswitch-item-hover: #{$grey-1};
     --regswitch-selected: #{$primary-accent-4};
@@ -56,7 +56,7 @@ $indicator-height: 0.75rem;
     display: flex;
     flex-direction: column;
     gap: $item-gap;
-    background-color: var(--regswitch-surface);
+    background-color: var(--regswitch-bg);
     backdrop-filter: blur(8px);
     border-radius: 3px;
     padding: 5px;
@@ -161,7 +161,7 @@ $indicator-height: 0.75rem;
         display: flex;
         flex-direction: column;
         gap: $item-gap;
-        background-color: var(--regswitch-surface);
+        background-color: var(--regswitch-bg);
         border-radius: 3px;
         padding: 5px;
         box-shadow: 0 0 5px rgba($black-0, 0.6);
